src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CORCHETE_DER
    CORCHETE_IZQ
    PUNTO_COMA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIO bloque FIN
Rule 2     bloque -> sentencia bloque
Rule 3     bloque -> <empty>
Rule 4     sentencia -> declaracion
Rule 5     sentencia -> asignacion
Rule 6     sentencia -> condicional
Rule 7     sentencia -> bucle_repetir
Rule 8     sentencia -> bucle_mientras
Rule 9     sentencia -> definicion_funcion
Rule 10    sentencia -> io
Rule 11    sentencia -> llamada_sentencia
Rule 12    declaracion -> ID DOS_PUNTOS tipo ASIGNACION expresion
Rule 13    asignacion -> ID ASIGNACION expresion
Rule 14    tipo -> RECURSO
Rule 15    tipo -> PORCENTAJE
Rule 16    tipo -> BYTES
Rule 17    tipo -> SEGUNDOS
Rule 18    tipo -> COMANDO
Rule 19    tipo -> ESTADO
Rule 20    tipo -> BOOLEANO
Rule 21    tipo -> ENTERO
Rule 22    tipo -> TEXTO
Rule 23    io -> MOSTRAR PAREN_IZQ expresion PAREN_DER
Rule 24    io -> MOSTRAR_ESTADO PAREN_IZQ PAREN_DER
Rule 25    io -> REGISTRAR_ALERTA PAREN_IZQ expresion PAREN_DER
Rule 26    io -> REGISTRAR_INCIDENTE PAREN_IZQ expresion PAREN_DER
Rule 27    io -> EJECUTAR_COMANDO PAREN_IZQ expresion PAREN_DER
Rule 28    io -> ESPERAR PAREN_IZQ expresion PAREN_DER
Rule 29    io -> LEER_METRICAS PAREN_IZQ expresion PAREN_DER
Rule 30    io -> EXPORTAR_LOG PAREN_IZQ expresion PAREN_DER
Rule 31    condicional -> SI expresion LLAVE_IZQ bloque LLAVE_DER cadena_sino
Rule 32    cadena_sino -> SINO SI expresion LLAVE_IZQ bloque LLAVE_DER cadena_sino
Rule 33    cadena_sino -> SINO LLAVE_IZQ bloque LLAVE_DER
Rule 34    cadena_sino -> <empty>
Rule 35    bucle_repetir -> REPETIR ID DESDE expresion HASTA expresion LLAVE_IZQ bloque LLAVE_DER
Rule 36    bucle_mientras -> MIENTRAS expresion LLAVE_IZQ bloque LLAVE_DER
Rule 37    nombre_funcion -> ID
Rule 38    nombre_funcion -> OBTENER_USO_CPU
Rule 39    nombre_funcion -> OBTENER_MEMORIA_LIBRE
Rule 40    nombre_funcion -> OBTENER_USO_DISCO
Rule 41    nombre_funcion -> OBTENER_USO_MEMORIA
Rule 42    nombre_funcion -> ESTADO_SERVICIO
Rule 43    nombre_funcion -> EJECUTAR_COMANDO
Rule 44    nombre_funcion -> REGISTRAR_ALERTA
Rule 45    nombre_funcion -> REGISTRAR_INCIDENTE
Rule 46    nombre_funcion -> MOSTRAR
Rule 47    nombre_funcion -> ESPERAR
Rule 48    nombre_funcion -> LEER_METRICAS
Rule 49    nombre_funcion -> EXPORTAR_LOG
Rule 50    nombre_funcion -> FORMATEAR_BYTES
Rule 51    nombre_funcion -> VERIFICAR_DISCO
Rule 52    nombre_funcion -> GENERAR_REPORTE_SISTEMA
Rule 53    nombre_funcion -> MOSTRAR_ESTADO
Rule 54    definicion_funcion -> FUNCION nombre_funcion PAREN_IZQ parametros PAREN_DER DOS_PUNTOS tipo LLAVE_IZQ bloque RETORNAR expresion LLAVE_DER
Rule 55    parametros -> lista_parametros
Rule 56    parametros -> <empty>
Rule 57    lista_parametros -> parametro COMA lista_parametros
Rule 58    lista_parametros -> parametro
Rule 59    parametro -> ID DOS_PUNTOS tipo
Rule 60    llamada_sentencia -> nombre_funcion PAREN_IZQ argumentos PAREN_DER
Rule 61    argumentos -> lista_argumentos
Rule 62    argumentos -> <empty>
Rule 63    lista_argumentos -> expresion COMA lista_argumentos
Rule 64    lista_argumentos -> expresion
Rule 65    expresion -> expresion OR expresion
Rule 66    expresion -> expresion AND expresion
Rule 67    expresion -> NOT expresion
Rule 68    expresion -> expresion MAYOR expresion
Rule 69    expresion -> expresion MENOR expresion
Rule 70    expresion -> expresion MAYOR_IGUAL expresion
Rule 71    expresion -> expresion MENOR_IGUAL expresion
Rule 72    expresion -> expresion IGUAL expresion
Rule 73    expresion -> expresion DIFERENTE expresion
Rule 74    expresion -> expresion MAS expresion
Rule 75    expresion -> expresion MENOS expresion
Rule 76    expresion -> expresion POR expresion
Rule 77    expresion -> expresion DIVIDIDO expresion
Rule 78    expresion -> expresion PORCENTAJE_SIMB expresion
Rule 79    expresion -> PAREN_IZQ expresion PAREN_DER
Rule 80    expresion -> OBTENER_USO_CPU PAREN_IZQ argumentos PAREN_DER
Rule 81    expresion -> OBTENER_MEMORIA_LIBRE PAREN_IZQ argumentos PAREN_DER
Rule 82    expresion -> OBTENER_USO_DISCO PAREN_IZQ argumentos PAREN_DER
Rule 83    expresion -> OBTENER_USO_MEMORIA PAREN_IZQ argumentos PAREN_DER
Rule 84    expresion -> ESTADO_SERVICIO PAREN_IZQ argumentos PAREN_DER
Rule 85    expresion -> FORMATEAR_BYTES PAREN_IZQ argumentos PAREN_DER
Rule 86    expresion -> VERIFICAR_DISCO PAREN_IZQ argumentos PAREN_DER
Rule 87    expresion -> GENERAR_REPORTE_SISTEMA PAREN_IZQ argumentos PAREN_DER
Rule 88    expresion -> ID PAREN_IZQ argumentos PAREN_DER
Rule 89    expresion -> NUMERO
Rule 90    expresion -> DECIMAL
Rule 91    expresion -> CADENA
Rule 92    expresion -> VERDADERO
Rule 93    expresion -> FALSO
Rule 94    expresion -> ID

Terminals, with rules where they appear

AND                  : 66
ASIGNACION           : 12 13
BOOLEANO             : 20
BYTES                : 16
CADENA               : 91
COMA                 : 57 63
COMANDO              : 18
CORCHETE_DER         : 
CORCHETE_IZQ         : 
DECIMAL              : 90
DESDE                : 35
DIFERENTE            : 73
DIVIDIDO             : 77
DOS_PUNTOS           : 12 54 59
EJECUTAR_COMANDO     : 27 43
ENTERO               : 21
ESPERAR              : 28 47
ESTADO               : 19
ESTADO_SERVICIO      : 42 84
EXPORTAR_LOG         : 30 49
FALSO                : 93
FIN                  : 1
FORMATEAR_BYTES      : 50 85
FUNCION              : 54
GENERAR_REPORTE_SISTEMA : 52 87
HASTA                : 35
ID                   : 12 13 35 37 59 88 94
IGUAL                : 72
INICIO               : 1
LEER_METRICAS        : 29 48
LLAVE_DER            : 31 32 33 35 36 54
LLAVE_IZQ            : 31 32 33 35 36 54
MAS                  : 74
MAYOR                : 68
MAYOR_IGUAL          : 70
MENOR                : 69
MENOR_IGUAL          : 71
MENOS                : 75
MIENTRAS             : 36
MOSTRAR              : 23 46
MOSTRAR_ESTADO       : 24 53
NOT                  : 67
NUMERO               : 89
OBTENER_MEMORIA_LIBRE : 39 81
OBTENER_USO_CPU      : 38 80
OBTENER_USO_DISCO    : 40 82
OBTENER_USO_MEMORIA  : 41 83
OR                   : 65
PAREN_DER            : 23 24 25 26 27 28 29 30 54 60 79 80 81 82 83 84 85 86 87 88
PAREN_IZQ            : 23 24 25 26 27 28 29 30 54 60 79 80 81 82 83 84 85 86 87 88
POR                  : 76
PORCENTAJE           : 15
PORCENTAJE_SIMB      : 78
PUNTO_COMA           : 
RECURSO              : 14
REGISTRAR_ALERTA     : 25 44
REGISTRAR_INCIDENTE  : 26 45
REPETIR              : 35
RETORNAR             : 54
SEGUNDOS             : 17
SI                   : 31 32
SINO                 : 32 33
TEXTO                : 22
VERDADERO            : 92
VERIFICAR_DISCO      : 51 86
error                : 

Nonterminals, with rules where they appear

argumentos           : 60 80 81 82 83 84 85 86 87 88
asignacion           : 5
bloque               : 1 2 31 32 33 35 36 54
bucle_mientras       : 8
bucle_repetir        : 7
cadena_sino          : 31 32
condicional          : 6
declaracion          : 4
definicion_funcion   : 9
expresion            : 12 13 23 25 26 27 28 29 30 31 32 35 35 36 54 63 64 65 65 66 66 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79
io                   : 10
lista_argumentos     : 61 63
lista_parametros     : 55 57
llamada_sentencia    : 11
nombre_funcion       : 54 60
parametro            : 57 58
parametros           : 54
programa             : 0
sentencia            : 2
tipo                 : 12 54 59

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIO bloque FIN

    INICIO          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INICIO . bloque FIN
    (2) bloque -> . sentencia bloque
    (3) bloque -> .
    (4) sentencia -> . declaracion
    (5) sentencia -> . asignacion
    (6) sentencia -> . condicional
    (7) sentencia -> . bucle_repetir
    (8) sentencia -> . bucle_mientras
    (9) sentencia -> . definicion_funcion
    (10) sentencia -> . io
    (11) sentencia -> . llamada_sentencia
    (12) declaracion -> . ID DOS_PUNTOS tipo ASIGNACION expresion
    (13) asignacion -> . ID ASIGNACION expresion
    (31) condicional -> . SI expresion LLAVE_IZQ bloque LLAVE_DER cadena_sino
    (35) bucle_repetir -> . REPETIR ID DESDE expresion HASTA expresion LLAVE_IZQ bloque LLAVE_DER
    (36) bucle_mientras -> . MIENTRAS expresion LLAVE_IZQ bloque LLAVE_DER
    (54) definicion_funcion -> . FUNCION nombre_funcion PAREN_IZQ parametros PAREN_DER DOS_PUNTOS tipo LLAVE_IZQ bloque RETORNAR expresion LLAVE_DER
    (23) io -> . MOSTRAR PAREN_IZQ expresion PAREN_DER
    (24) io -> . MOSTRAR_ESTADO PAREN_IZQ PAREN_DER
    (25) io -> . REGISTRAR_ALERTA PAREN_IZQ expresion PAREN_DER
    (26) io -> . REGISTRAR_INCIDENTE PAREN_IZQ expresion PAREN_DER
    (27) io -> . EJECUTAR_COMANDO PAREN_IZQ expresion PAREN_DER
    (28) io -> . ESPERAR PAREN_IZQ expresion PAREN_DER
    (29) io -> . LEER_METRICAS PAREN_IZQ expresion PAREN_DER
    (30) io -> . EXPORTAR_LOG PAREN_IZQ expresion PAREN_DER
    (60) llamada_sentencia -> . nombre_funcion PAREN_IZQ argumentos PAREN_DER
    (37) nombre_funcion -> . ID
    (38) nombre_funcion -> . OBTENER_USO_CPU
    (39) nombre_funcion -> . OBTENER_MEMORIA_LIBRE
    (40) nombre_funcion -> . OBTENER_USO_DISCO
    (41) nombre_funcion -> . OBTENER_USO_MEMORIA
    (42) nombre_funcion -> . ESTADO_SERVICIO
    (43) nombre_funcion -> . EJECUTAR_COMANDO
    (44) nombre_funcion -> . REGISTRAR_ALERTA
    (45) nombre_funcion -> . REGISTRAR_INCIDENTE
    (46) nombre_funcion -> . MOSTRAR
    (47) nombre_funcion -> . ESPERAR
    (48) nombre_funcion -> . LEER_METRICAS
    (49) nombre_funcion -> . EXPORTAR_LOG
    (50) nombre_funcion -> . FORMATEAR_BYTES
    (51) nombre_funcion -> . VERIFICAR_DISCO
    (52) nombre_funcion -> . GENERAR_REPORTE_SISTEMA
    (53) nombre_funcion -> . MOSTRAR_ESTADO

    FIN             reduce using rule 3 (bloque -> .)
    ID              shift and go to state 13
    SI              shift and go to state 14
    REPETIR         shift and go to state 15
    MIENTRAS        shift and go to state 16
    FUNCION         shift and go to state 17
    MOSTRAR         shift and go to state 19
    MOSTRAR_ESTADO  shift and go to state 20
    REGISTRAR_ALERTA shift and go to state 21
    REGISTRAR_INCIDENTE shift and go to state 22
    EJECUTAR_COMANDO shift and go to state 23
    ESPERAR         shift and go to state 24
    LEER_METRICAS   shift and go to state 25
    EXPORTAR_LOG    shift and go to state 26
    OBTENER_USO_CPU shift and go to state 27
    OBTENER_MEMORIA_LIBRE shift and go to state 28
    OBTENER_USO_DISCO shift and go to state 29
    OBTENER_USO_MEMORIA shift and go to state 30
    ESTADO_SERVICIO shift and go to state 31
    FORMATEAR_BYTES shift and go to state 32
    VERIFICAR_DISCO shift and go to state 33
    GENERAR_REPORTE_SISTEMA shift and go to state 34

    bloque                         shift and go to state 3
    sentencia                      shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    condicional                    shift and go to state 7
    bucle_repetir                  shift and go to state 8
    bucle_mientras                 shift and go to state 9
    definicion_funcion             shift and go to state 10
    io                             shift and go to state 11
    llamada_sentencia              shift and go to state 12
    nombre_funcion                 shift and go to state 18

state 3

    (1) programa -> INICIO bloque . FIN

    FIN             shift and go to state 35


state 4

    (2) bloque -> sentencia . bloque
    (2) bloque -> . sentencia bloque
    (3) bloque -> .
    (4) sentencia -> . declaracion
    (5) sentencia -> . asignacion
    (6) sentencia -> . condicional
    (7) sentencia -> . bucle_repetir
    (8) sentencia -> . bucle_mientras
    (9) sentencia -> . definicion_funcion
    (10) sentencia -> . io
    (11) sentencia -> . llamada_sentencia
    (12) declaracion -> . ID DOS_PUNTOS tipo ASIGNACION expresion
    (13) asignacion -> . ID ASIGNACION expresion
    (31) condicional -> . SI expresion LLAVE_IZQ bloque LLAVE_DER cadena_sino
    (35) bucle_repetir -> . REPETIR ID DESDE expresion HASTA expresion LLAVE_IZQ bloque LLAVE_DER
    (36) bucle_mientras -> . MIENTRAS expresion LLAVE_IZQ bloque LLAVE_DER
    (54) definicion_funcion -> . FUNCION nombre_funcion PAREN_IZQ parametros PAREN_DER DOS_PUNTOS tipo LLAVE_IZQ bloque RETORNAR expresion LLAVE_DER
    (23) io -> . MOSTRAR PAREN_IZQ expresion PAREN_DER
    (24) io -> . MOSTRAR_ESTADO PAREN_IZQ PAREN_DER
    (25) io -> . REGISTRAR_ALERTA PAREN_IZQ expresion PAREN_DER
    (26) io -> . REGISTRAR_INCIDENTE PAREN_IZQ expresion PAREN_DER
    (27) io -> . EJECUTAR_COMANDO PAREN_IZQ expresion PAREN_DER
    (28) io -> . ESPERAR PAREN_IZQ expresion PAREN_DER
    (29) io -> . LEER_METRICAS PAREN_IZQ expresion PAREN_DER
    (30) io -> . EXPORTAR_LOG PAREN_IZQ expresion PAREN_DER
    (60) llamada_sentencia -> . nombre_funcion PAREN_IZQ argumentos PAREN_DER
    (37) nombre_funcion -> . ID
    (38) nombre_funcion -> . OBTENER_USO_CPU
    (39) nombre_funcion -> . OBTENER_MEMORIA_LIBRE
    (40) nombre_funcion -> . OBTENER_USO_DISCO
    (41) nombre_funcion -> . OBTENER_USO_MEMORIA
    (42) nombre_funcion -> . ESTADO_SERVICIO
    (43) nombre_funcion -> . EJECUTAR_COMANDO
    (44) nombre_funcion -> . REGISTRAR_ALERTA
    (45) nombre_funcion -> . REGISTRAR_INCIDENTE
    (46) nombre_funcion -> . MOSTRAR
    (47) nombre_funcion -> . ESPERAR
    (48) nombre_funcion -> . LEER_METRICAS
    (49) nombre_funcion -> . EXPORTAR_LOG
    (50) nombre_funcion -> . FORMATEAR_BYTES
    (51) nombre_funcion -> . VERIFICAR_DISCO
    (52) nombre_funcion -> . GENERAR_REPORTE_SISTEMA
    (53) nombre_funcion -> . MOSTRAR_ESTADO

    FIN             reduce using rule 3 (bloque -> .)
    LLAVE_DER       reduce using rule 3 (bloque -> .)
    RETORNAR        reduce using rule 3 (bloque -> .)
    ID              shift and go to state 13
    SI              shift and go to state 14
    REPETIR         shift and go to state 15
    MIENTRAS        shift and go to state 16
    FUNCION         shift and go to state 17
    MOSTRAR         shift and go to state 19
    MOSTRAR_ESTADO  shift and go to state 20
    REGISTRAR_ALERTA shift and go to state 21
    REGISTRAR_INCIDENTE shift and go to state 22
    EJECUTAR_COMANDO shift and go to state 23
    ESPERAR         shift and go to state 24
    LEER_METRICAS   shift and go to state 25
    EXPORTAR_LOG    shift and go to state 26
    OBTENER_USO_CPU shift and go to state 27
    OBTENER_MEMORIA_LIBRE shift and go to state 28
    OBTENER_USO_DISCO shift and go to state 29
    OBTENER_USO_MEMORIA shift and go to state 30
    ESTADO_SERVICIO shift and go to state 31
    FORMATEAR_BYTES shift and go to state 32
    VERIFICAR_DISCO shift and go to state 33
    GENERAR_REPORTE_SISTEMA shift and go to state 34

    sentencia                      shift and go to state 4
    bloque                         shift and go to state 36
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    condicional                    shift and go to state 7
    bucle_repetir                  shift and go to state 8
    bucle_mientras                 shift and go to state 9
    definicion_funcion             shift and go to state 10
    io                             shift and go to state 11
    llamada_sentencia              shift and go to state 12
    nombre_funcion                 shift and go to state 18

state 5

    (4) sentencia -> declaracion .
